# bootcamp_data_engineering_aula_18

./: README.md  consumo_api.py  pyproject.toml
src/: main.py
